--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         .bgimg-1 {
           background-position: center;
           background-size: cover;
-          background-image: url("static/w3images/IMG_1297.jpg");
+          background-image: url("static/w3images/IMG_1297.JPG");
           min-height: 50%;
         }
         
@@ -81,28 +81,28 @@
     <h3 class="w3-center">THE Pigs</h3>
     <div class="w3-row-padding w3-section">
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_1297.jpg" style="width:90%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pigs">
+        <img src="static/w3images/IMG_1297.JPG" style="width:90%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pigs">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_1301.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Charli">
+        <img src="static/w3images/IMG_1301.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Charli">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_1310.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa and Carly">
+        <img src="static/w3images/IMG_1310.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa and Carly">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_1319.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher and Alyssa">
+        <img src="static/w3images/IMG_1319.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher and Alyssa">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_1317.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher and Alyssa">
+        <img src="static/w3images/IMG_1317.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher and Alyssa">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_0357.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa">
+        <img src="static/w3images/IMG_0357.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_0487.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Delaney">
+        <img src="static/w3images/IMG_0487.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Delaney">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_0490.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
+        <img src="static/w3images/IMG_0490.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
       </div>
       <div class="w3-col l3 m6">
         <img src="static/w3images/IMG_1313.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa and Carly">
@@ -127,16 +127,16 @@
     <h3 class="w3-center">The Cows</h3>
     <div class="w3-row-padding w3-section">
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_8701.jpg" style="width:90%" onclick="onClick(this)" class="w3-hover-opacity" alt="Delaney">
+        <img src="static/w3images/IMG_8701.JPG" style="width:90%" onclick="onClick(this)" class="w3-hover-opacity" alt="Delaney">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_8717.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Audrey">
+        <img src="static/w3images/IMG_8717.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Audrey">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_0730.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa and Carly">
+        <img src="static/w3images/IMG_0730.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa and Carly">
       </div>
       <div class="w3-col l3 m6">
-        <img src="static/w3images/IMG_1061.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
+        <img src="static/w3images/IMG_1061.PNG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
       </div>
       <div class="w3-col l3 m6">
         <img src="static/w3images/hank.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hank with his Grand Champion Dairy Steer trophy and ribbon">
@@ -207,16 +207,16 @@
     <h3 class="w3-center">Everything Else</h3><br>
       <div class="w3-row-padding w3-section">
         <div class="w3-col l3 m6">
-          <img src="static/w3images/IMG_1237.jpg" style="width:90%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa on Vegas">
+          <img src="static/w3images/IMG_1237.JPG" style="width:90%" onclick="onClick(this)" class="w3-hover-opacity" alt="Alyssa on Vegas">
         </div>
         <div class="w3-col l3 m6">
-          <img src="static/w3images/IMG_E1008.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Audrey">
+          <img src="static/w3images/IMG_E1008.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Audrey">
         </div>
         <div class="w3-col l3 m6">
-          <img src="static/w3images/IMG_E1012.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Delaney">
+          <img src="static/w3images/IMG_E1012.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Delaney">
         </div>
         <div class="w3-col l3 m6">
-          <img src="static/w3images/JDMQ7011.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
+          <img src="static/w3images/JDMQ7011.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
         </div>
         <div class="w3-col l3 m6">
           <img src="static/w3images/Asher.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
