--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <img src="static/w3images/JDMQ7011.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
         </div>
         <div class="w3-col l3 m6">
-          <img src="static/w3images/Asher.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
+          <img src="static/w3images/asher.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
         </div>
         <div class="w3-col l3 m6">
           <img src="static/w3images/football.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Asher">
