--- a/about.html
+++ b/about.html
@@ -78,31 +78,18 @@
                     <div class="col-lg-7 col-md-7 col-sm-7 tm-about-left">
                         <img src="img/theresanicole.jpg" alt="Image" class="img-responsive margin-bottom-30">
                         <h3 class="section-title-2 text-uppercase font-weight-300"><b>Nicole and Theresa</b> </h3>
-                        <p class="justify-text">Morbi dapibus rhoncus nulla ac tempus. Integer felis lorem, fermentum quis nisl accumsan, gravida gravida est. Cras ultrices rhoncus dui ut laoreet. Fusce tincidunt, urna a imperdiet tempor, orci dolor dictum elit, sit amet malesuada mauris magna eget dolor.</p>
-                        <p class="justify-text margin-bottom-30">Phasellus lobortis nisl ut tortor placerat, vel auctor felis semper. Quisque ut auctor sapien. Proin gravida arcu malesuada, venenatis nisl vitae, egestas sem. Vestibulum mauris magna, aliquam non commodo ac, porttitor a augue.</p>
+                        <p class="justify-text">Sometimes life doesn't turn out how you expect. Sometimes it turns out even better. We all take a journey through this life and I am glad to do it with you.</p>
+                        <p class="justify-text margin-bottom-30">Family is often not about blood but about bonds. I am glad the family around me is some blood and some choice. I wouldn't have it any other way.</p>
 
                     </div>
                     <div class="col-lg-5 col-md-5 col-sm-5 tm-about-right">
                         <div class="tm-img-container margin-bottom-30">
-                            <div class="tm-img-overlay">
-                                <p class="img-description">Feufelisda</p>
-                                <p class="img-title">Nullam Acurna</p>
-                            </div>
                             <img src="img/theresanicole1.jpg" alt="Image" class="img-responsive">
                         </div>
                         <div class="tm-img-container margin-bottom-30">
-                            <div class="tm-img-overlay">
-                                <p class="img-description">Feufelisda</p>
-                                <p class="img-title">Nullam Acurna</p>
-                            </div>
                             <img src="img/theresanicole2.jpg" alt="Image" class="img-responsive">
                         </div>
                         <div class="tm-img-container margin-bottom-30">
-                            <div class="tm-img-overlay">
-                                <p class="img-description">Feufelisda</p>
-                                <p class="img-title">Nullam Acurna</p>
-                            </div>
-                            <img src="img/theresanicole3.jpg" alt="Image" class="img-responsive">
                         </div>
                     </div>
                 </div>
@@ -123,15 +110,15 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="recent-post-container">
                             <h3 class="text-uppercase recent-post-title margin-bottom-30"><span class="font-weight-700">Engagement</span> <span class="font-weight-300 blue-text"> </span></h3>
-                            <img src="img/theresanicole.jpg" alt="Image" class="img-responsive margin-bottom-30">
-                            <p class="justify-text"><span class="red-text">Engagement</span> lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
+                            <img src="img/theresanicole3.jpg" alt="Image" class="img-responsive margin-bottom-30">
+                            <p class="justify-text"><span class="red-text">Engagement</span> It seemed like a long time coming but they got there. So happy to be a part of the journey.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="recent-post-container">
                             <h3 class="text-uppercase recent-post-title margin-bottom-30"><span class="font-weight-700">Bachelorette Party</span> </h3>
-                            <img src="img/15.jpg" alt="Image" class="img-responsive margin-bottom-30">
-                            <p class="justify-text"><span class="red-text">September 10, 2022</span> lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
+                            <img src="img/theresaandnicole15.jpg" alt="Image" class="img-responsive margin-bottom-30">
+                            <p class="justify-text"><span class="red-text">September 10, 2022</span> We had a lot of fun. That is about all I can say :)</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
