--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
                         <div class="recent-post-container">
                             <h3 class="text-uppercase recent-post-title margin-bottom-30"><span class="font-weight-700">The Wedding</span></h3>
                             <img src="img/16.jpg" alt="Image" class="img-responsive margin-bottom-30">
-                            <p class="justify-text"><span class="red-text">October 7, 2022</span> lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
+                            <p class="justify-text"><span class="red-text">October 7, 2022</span> Join us for a celabration of our vows.</p>
                         </div>
                     </div>
 
