--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/templatemo-style.css" rel="stylesheet">
+        <link rel="stylesheet" href="dist/css/lightbox.min.css">
+        <script src="dist/js/lightbox-plus-jquery.min.js"></script>
+
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,8 +44,8 @@
                             <ul>
                                 <li><a href="index.html" class="active">Home</a></li>
                                 <li><a href="about.html">Theresa and Nicole</a></li>
-                                <li><a href="profile.html">2022</a></li>
-                                <li><a href="contact.html">Other</a></li>
+                                <li><a href="all.html">2022</a></li>
+                                <li><a href="contact.html">More</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -148,8 +151,8 @@
                         <ul>
                             <li><a href="index.html">home</a></li>
                             <li><a href="about.html">Theresa and Nicole</a></li>
-                            <li><a href="profile.html">2022</a></li>
-                            <li><a href="contact.html">Other</a></li>
+                            <li><a href="all.html">2022</a></li>
+                            <li><a href="contact.html">More</a></li>
                         </ul>
                     </nav>
                 </div>
