--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/templatemo-style.css" rel="stylesheet">
+        <link rel="stylesheet" href="dist/css/lightbox.min.css">
+        <script src="dist/js/lightbox-plus-jquery.min.js"></script>
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,8 +43,8 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html" class="active">Theresa and Nicole</a></li>
-                                <li><a href="profile.html">2022</a></li>
-                                <li><a href="contact.html">Other</a></li>
+                                <li><a href="all.html">2022</a></li>
+                                <li><a href="contact.html">More</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -124,8 +126,8 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="recent-post-container">
                             <h3 class="text-uppercase recent-post-title margin-bottom-30"><span class="font-weight-700">The Wedding</span></h3>
-                            <img src="img/16.jpg" alt="Image" class="img-responsive margin-bottom-30">
-                            <p class="justify-text"><span class="red-text">October 7, 2022</span> Join us for a celabration of our vows.</p>
+                            <img src="img/NicoleTeresaEsess2022-9.jpg" alt="Image" class="img-responsive margin-bottom-30">
+                            <p class="justify-text"><span class="red-text">October 7, 2022</span> Join us for a celabration of our vows. </p>
                         </div>
                     </div>
 
@@ -145,8 +147,8 @@
                         <ul>
                             <li><a href="index.html">home</a></li>
                             <li><a href="about.html">Theresa and Nicole</a></li>
-                            <li><a href="profile.html">2022</a></li>
-                            <li><a href="contact.html">Other</a></li>
+                            <li><a href="all.html">2022</a></li>
+                            <li><a href="contact.html">More</a></li>
                         </ul>
                     </nav>
                 </div>
