--- a/animals.html
+++ b/animals.html
@@ -183,7 +183,7 @@
                         <a class="example-image-link" href="img/Leighton3.jpg" data-lightbox="example-1" data-title="Leighton Martin County Fair 2022"><img src="img/Leighton3.jpg" alt="Leighton" class="img-thumbnail"/></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
-                        <a class="example-image-link" href="img/Leighton4.jpg" data-lightbox="example-1" data-title="Leighton Reserve Champion Intermediate Beef Showman Martin County Fair 2022"><img src="img/Leighton4.jpg" alt="Leighton" class="img-thumbnail"/></a>
+                        <a class="example-image-link" href="img/leighton4.jpg" data-lightbox="example-1" data-title="Leighton Reserve Champion Intermediate Beef Showman Martin County Fair 2022"><img src="img/Leighton4.jpg" alt="Leighton" class="img-thumbnail"/></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
                         <a class="example-image-link" href="img/Leighton5.jpg" data-lightbox="example-1" data-title="Leighton State Fair 2022"><img src="img/Leighton5.jpg" alt="Leighton" class="img-thumbnail"/></a>
