--- a/funtimes.html
+++ b/funtimes.html
@@ -98,6 +98,9 @@
                         <a class="example-image-link" href="img/1.jpg" data-lightbox="example-1" data-title="Asher"><img src="img/1.jpg" alt="Asher" class="img-thumbnail"/></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                        <a class="example-image-link" href="img/dave.jpg" data-lightbox="example-1" data-title="Dave got a Barbie at the Covered Bridge Festival Parade. Fall 2022"><img src="img/dave.jpg" alt="Dave" class="img-thumbnail"/></a>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
                         <a class="example-image-link" href="img/19.jpg" data-lightbox="example-1" data-title="Wiley and Kate building a dog jump for 4-H"><img src="img/19.jpg" alt="Wiley" class="img-thumbnail"/></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
