--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <p style="font-size:2vw">We wanted a place to share our lives with all of you even if you don't have social media. 
-                        Welcome to the Heise, Mellgren, Wytaske, Pastrick, Hugoson, Peterson, etc family page. </p>
+                        Welcome to the Heise, Mellgren, Wytaske, Pastrick, Hugoson, Peterson, Ekblad etc family page. </p>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="carousel-container">
