--- a/about.html
+++ b/about.html
@@ -85,14 +85,13 @@
 
                     </div>
                     <div class="col-lg-5 col-md-5 col-sm-5 tm-about-right">
-                        <div class="tm-img-container margin-bottom-30">
+                        <div class="recent-post-container  margin-bottom-30">
                             <img src="img/theresanicole1.jpg" alt="Image" class="img-responsive">
                         </div>
-                        <div class="tm-img-container margin-bottom-30">
+                        <div class="recent-post-container">
                             <img src="img/theresanicole2.jpg" alt="Image" class="img-responsive">
                         </div>
-                        <div class="tm-img-container margin-bottom-30">
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -105,7 +104,7 @@
                         <h2 class="section-title">Our Journey</h2>
                         <div class="section-title-underline-blue"></div>
                         <hr class="section-title-underline">
-                        <p class="small">*************</p>
+
                     </div>
                 </div>
                 <div class="row">
@@ -126,8 +125,10 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="recent-post-container">
                             <h3 class="text-uppercase recent-post-title margin-bottom-30"><span class="font-weight-700">The Wedding</span></h3>
-                            <img src="img/NicoleTeresaEsess2022-9.jpg" alt="Image" class="img-responsive margin-bottom-30">
-                            <p class="justify-text"><span class="red-text">October 7, 2022</span> Join us for a celabration of our vows. </p>
+                                <a href="wedding.html">
+                                <img src="img/NicoleTeresaEsess2022-9.jpg" alt="Image" class="img-responsive margin-bottom-30">
+                                <p class="justify-text"><span class="red-text">October 7, 2022</span> Join us for a celabration of our vows. </p>
+                            </a>
                         </div>
                     </div>
 
