--- a/beacon.html
+++ b/beacon.html
@@ -12,7 +12,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="x-apple-disable-message-reformatting">
-
+  <link rel="stylesheet" href="dist/css/lightbox.min.css">
+  <script src="dist/js/lightbox-plus-jquery.min.js"></script>
   <!--[if !mso]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--<![endif]-->
   <title></title>
   
@@ -88,6 +89,7 @@ a[x-apple-data-detectors='true'] {
 
 table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: underline; } @media (max-width: 480px) { #u_content_heading_1 .v-font-size { font-size: 55px !important; } #u_content_text_1 .v-container-padding-padding { padding: 0px 25px 443px !important; } #u_content_heading_3 .v-font-size { font-size: 27px !important; } #u_content_text_3 .v-container-padding-padding { padding: 0px 25px 40px !important; } #u_content_text_6 .v-container-padding-padding { padding: 0px 75px 20px !important; } #u_content_text_4 .v-container-padding-padding { padding: 0px 75px 20px !important; } #u_content_text_5 .v-container-padding-padding { padding: 0px 75px 20px !important; } #u_content_button_2 .v-container-padding-padding { padding: 5px 10px 50px !important; } #u_content_button_2 .v-size-width { width: 57% !important; } #u_content_image_5 .v-container-padding-padding { padding: 50px 10px 10px !important; } #u_content_image_5 .v-src-width { width: auto !important; } #u_content_image_5 .v-src-max-width { max-width: 35% !important; } }
     </style>
+  
   
   
 
@@ -349,9 +351,9 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
   <tr>
     <td style="padding-right: 0px;padding-left: 0px;" align="center">
-      
-      <img align="center" border="0" src="images/herd.JPG" alt="image" title="image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 190px;" width="190" class="v-src-width v-src-max-width"/>
-      
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design"></div>      
+        <a class="example-image-link" href="images/herd.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/herd.JPG" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 190px;" width="190" class="v-src-width v-src-max-width"/></a>
+      </div>
     </td>
   </tr>
 </table>
