horses second page

--- a/beaconpics.html
+++ b/beaconpics.html
@@ -210,7 +210,10 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design"></div>      
         <a class="example-image-link" href="images/babe.jpg" data-lightbox="example-1" data-title="The herd"><img src="images/babe.jpg" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 190px;" width="190" class="v-src-width v-src-max-width"/></a>
-      </div>      
+      </div>     
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design"></div>      
+      <a class="example-image-link" href="images/IMG_1556.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1556.JPG" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 190px;" width="190" class="v-src-width v-src-max-width"/></a>
+    </div>    
     </td>
   </tr>
 </table>
