horses second page

--- a/beacon.html
+++ b/beacon.html
@@ -9,11 +9,15 @@
   </o:OfficeDocumentSettings>
 </xml>
 <![endif]-->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="x-apple-disable-message-reformatting">
-  <link rel="stylesheet" href="dist/css/lightbox.min.css">
-  <script src="dist/js/lightbox-plus-jquery.min.js"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="x-apple-disable-message-reformatting">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700' rel='stylesheet' type='text/css'>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="css/templatemo-style.css" rel="stylesheet">
+<link rel="stylesheet" href="dist/css/lightbox.min.css">
+<script src="dist/js/lightbox-plus-jquery.min.js"></script>
   <!--[if !mso]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--<![endif]-->
   <title></title>
   
