horses second page

--- a/beaconpics.html
+++ b/beaconpics.html
@@ -209,6 +209,18 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
               <a class="example-image-link" href="images/IMG_1561.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1561.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
             </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1541.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1541.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1543.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1543.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1545.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1545.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1546.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1546.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
           </div>
 
         </div>
