horses second page

--- a/beaconpics.html
+++ b/beaconpics.html
@@ -219,7 +219,49 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
               <a class="example-image-link" href="images/IMG_1545.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1545.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
-              <a class="example-image-link" href="images/IMG_1546.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1546.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+              <a class="example-image-link" href="images/IMG_1554.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1554.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1555.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1555.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1542.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1542.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1560.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1560.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1566.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1566.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1574.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1574.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1573.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1573.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1575.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1575.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1562.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1562.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1544.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1544.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1539.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1539.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1572.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1572.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1571.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1571.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1570.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1570.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+              <a class="example-image-link" href="images/IMG_1569.JPG" data-lightbox="example-1" data-title="The herd"><img src="images/IMG_1569.JPG" alt="The herd" class="rounded mx-auto d-block" data-holder-rendered="true" style="width: 200px; height: auto;"/></a>
             </div>
           </div>
 
