--- a/wedding.html
+++ b/wedding.html
@@ -80,10 +80,61 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="recent-post-container">
                             <h3 class="text-uppercase recent-post-title margin-bottom-30"><span class="font-weight-700">The Wedding</span></h3>
-                            <img src="img/NicoleTeresaEsess2022-9.jpg" alt="Image" class="img-responsive margin-bottom-30">
+
                             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
-                                <a class="example-image-link" href="img/NicoleTeresaEsess2022-9.jpg" data-lightbox="example-1" ><img src="img/NicoleTeresaEsess2022-9.jpg" alt="Theresa and Nicole" class="img-thumbnail"/></a>
-                            </div>                            
+                                <a class="example-image-link" href="img/onthebar.jpg" data-lightbox="example-1"  data-title="Theresa and Nicole"><img src="img/onthebar.jpg" alt="Theresa and Nicole" class="img-thumbnail"/></a>
+                            </div>    
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/nicolemakeup.jpg" data-lightbox="example-1" data-title="Proof Nicole wore makeup"><img src="img/nicolemakeup.jpg" alt="Proof Nicole wore makeup" class="img-thumbnail"/></a>
+                            </div>  
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/alyssamakeup.jpg" data-lightbox="example-1" data-title="Alyssa working on her makeup"><img src="img/alyssamakeup.jpg" alt="Alyssa working on her makeup" class="img-thumbnail"/></a>
+                            </div>     
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/theresaready.jpg" data-lightbox="example-1" data-title="Theresa is ready!"><img src="img/theresaready.jpg" alt="Theresa is ready!" class="img-thumbnail"/></a>
+                            </div>   
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/boquet.jpg" data-lightbox="example-1" data-title="Bridesmaid boquet - created by Nicole and leather by Theresa"><img src="img/boquet.jpg" alt="Bridesmaid boquet - created by Nicole and leather by Theresa" class="img-thumbnail"/></a>
+                            </div>   
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/katealyssa.jpg" data-lightbox="example-1" data-title="Alyssa and Kate"><img src="img/katealyssa.jpg" alt="Alyssa and Kate" class="img-thumbnail"/></a>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/sign.jpg" data-lightbox="example-1" data-title="Welcome to the Wedding"><img src="img/sign.jpg" alt="Welcome to the Wedding" class="img-thumbnail"/></a>
+                            </div>  
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/alyssaasher.JPG" data-lightbox="example-1" data-title="Alyssa and Asher"><img src="img/alyssaasher.JPG" alt="Alyssa and Asher" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/theresasiblings.JPG" data-lightbox="example-1" data-title="Theresa's Siblings"><img src="img/theresasiblings.JPG" alt="Theresa's Siblings" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/weddingparty.JPG" data-lightbox="example-1" data-title="The Wedding Party"><img src="img/weddingparty.JPG" alt="The Wedding Party" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/teamtheresa.JPG" data-lightbox="example-1" data-title="Team Theresa"><img src="img/teamtheresa.JPG" alt="Team Theresa" class="img-thumbnail"/></a>
+                            </div> 
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/teamnicole.JPG" data-lightbox="example-1" data-title="Team Nicole"><img src="img/teamnicole.JPG" alt="Team Nicole" class="img-thumbnail"/></a>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/nicoledance.jpg" data-lightbox="example-1" data-title="Nicole and her dad"><img src="img/nicoledance.jpg" alt="Nicole and her dad" class="img-thumbnail"/></a>
+                            </div>    
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/theresadance.jpg" data-lightbox="example-1" data-title="Theresa and her dad"><img src="img/theresadance.jpg" alt="Theresa and her dad" class="img-thumbnail"/></a>
+                            </div>   
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/dancetogether.jpg" data-lightbox="example-1" data-title="First dance"><img src="img/dancetogether.jpg" alt="First dance" class="img-thumbnail"/></a>
+                            </div>  
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/alyssaluke.JPG" data-lightbox="example-1" data-title="Alyssa and Luke"><img src="img/alyssaluke.JPG" alt="Alyssa and Luke" class="img-thumbnail"/></a>
+                            </div>   
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/alyssagrandpa.JPG" data-lightbox="example-1" data-title="Alyssa and her grandpa"><img src="img/alyssagrandpa.JPG" alt="Alyssa and her grandpa" class="img-thumbnail"/></a>
+                            </div>  
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item design">
+                                <a class="example-image-link" href="img/davefam.PNG" data-lightbox="example-1" data-title="Shayna, Audrey, Carly, Delaney, Dave Mellgren"><img src="img/davefam.PNG" alt="Shayna, Audrey, Carly, Delaney, Dave Mellgren" class="img-thumbnail"/></a>
+                            </div>                       
                         </div>
                     </div>
 
